SessionUpdateTracker should ignore no-op entries for pre/post image oplogs

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.0, v3.6
    • Sharding 2019-03-11
    • 13
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      These pre/post entries is only valid if paired with the corresponding update/delete oplog entries. Since the update/delete oplog entry always comes after the pre/post entry and both of these entries contain the same amount information necessary to properly replicate the config.transactions table, the pre/post entry should be ignored. Otherwise, it can create a situation where the secondary replication would mistakenly think that write was performed if sees the pre/post entry even though the update/delete oplog entry was removed due to replication rollback.

      Note: it should not ignore no-op entries generated during session migration.

            Assignee:
            Randolph Tan
            Reporter:
            Randolph Tan
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: