SERVER-36004 SessionUpdateTracker should ignore no-op entries for pre/post image oplogs

(cherry picked from commit 9638317daa5300efdd43acfa4688e5c739beff4d)